[gd_scene load_steps=8 format=3 uid="uid://bydgq1bvyaibu"]

[ext_resource type="Texture2D" uid="uid://775huuenwo5w" path="res://kenney_top-down-shooter/spritesheet_characters.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://ho66c0s0paq" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Shader" uid="uid://c1srx5vlfut7k" path="res://zombie_flash.gdshader" id="3_hqtel"]
[ext_resource type="Texture2D" uid="uid://d257ffddlidy4" path="res://kenney_top-down-shooter/icon.svg" id="3_i3pqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hqtel"]
shader = ExtResource("3_hqtel")
shader_parameter/silhouette_color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_4flbx"]
radius = 16.27882

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sweqy"]
shader = ExtResource("3_hqtel")
shader_parameter/silhouette_color = Color(1, 1, 1, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 2
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(11, 0)
texture = ExtResource("1_4flbx")
region_enabled = true
region_rect = Rect2(2.464138, 175.8634, 50.98092, 43.59616)

[node name="DamagedSprite" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_hqtel")
position = Vector2(11, 0)
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_4flbx")
region_enabled = true
region_rect = Rect2(2.464138, 175.8634, 50.98092, 43.59616)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_4flbx")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(36, 9)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.3, 0.3)
position_smoothing_enabled = true

[node name="ZombieAim" type="Marker2D" parent="." groups=["zombie_aim"]]
position = Vector2(-24, -15)

[node name="ZombieAim2" type="Marker2D" parent="." groups=["zombie_aim"]]
position = Vector2(22, -16)

[node name="ZombieAim3" type="Marker2D" parent="." groups=["zombie_aim"]]
position = Vector2(-23, 25)

[node name="ZombieAim4" type="Marker2D" parent="." groups=["zombie_aim"]]
position = Vector2(23, 23)

[node name="Flash" type="Sprite2D" parent="."]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_sweqy")
position = Vector2(35, 9.500001)
scale = Vector2(0.074218765, 0.0859375)
texture = ExtResource("3_i3pqv")

[node name="FlashParticles" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(36, 9)
scale = Vector2(2, 2)
emitting = false
amount = 500
lifetime = 0.18000000000000002
preprocess = 10.0
explosiveness = 1.0
randomness = 0.14
lifetime_randomness = 0.29
emission_shape = 1
emission_sphere_radius = 4.4
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
